frontend/test/should_fail/dangle_004.grg
rule r {
	x: Node;
	y: Node;
	x -e:Edge-> y;

	replace{
		-e->y;
	}
}
